@@ -14,10 +14,11 @@ import edu.colorado.phet.common.phetcommon.view.graphics.transforms.ModelViewTra
 import edu.colorado.phet.common.phetcommon.view.util.BufferedImageUtils;
 import edu.colorado.phet.common.piccolophet.event.CursorHandler;
 import edu.colorado.phet.common.piccolophet.nodes.PhetPPath;
-import edu.colorado.phet.fluidpressureandflow.FluidPressureAndFlowApplication;
 import edu.colorado.phet.fluidpressureandflow.view.RelativeDragHandler;
 import edu.umd.cs.piccolo.PNode;
 import edu.umd.cs.piccolo.nodes.PImage;
+
+import static edu.colorado.phet.fluidpressureandflow.FluidPressureAndFlowApplication.RESOURCES;
 
 /**
  * @author Sam Reid
@@ -26,13 +27,21 @@ public class WaterTowerNode extends PNode {
     public WaterTowerNode( final ModelViewTransform transform, final WaterTower waterTower ) {
 
         //Handle
-        addChild( new PhetPPath( new Rectangle( 200, 0, 100, 100 ), Color.yellow ) {{
+        addChild( new PImage( RESOURCES.getImage( "handle.png" ) ) {{
             addInputEventListener( new RelativeDragHandler( this, transform, waterTower.getTankBottomCenter(), new Function1<Point2D, Point2D>() {
                 public Point2D apply( Point2D modelLocation ) {
                     return new Point2D.Double( waterTower.getTankBottomCenter().getValue().getX(), MathUtil.clamp( 0, modelLocation.getY(), WaterTower.MAX_Y ) );
                 }
             } ) );
+            scale( 1.75 );
             addInputEventListener( new CursorHandler() );
+            waterTower.getTankBottomCenter().addObserver( new SimpleObserver() {
+                public void update() {
+                    final Point2D tankTopCenter = waterTower.getTankTopCenter();
+                    final Point2D view = transform.modelToView( tankTopCenter );
+                    setOffset( view.getX(), view.getY() - getFullBounds().getHeight() );
+                }
+            } );
         }} );
 
         addChild( new PhetPPath( Color.gray, new BasicStroke( 5 ), Color.darkGray ) {{ // tank
@@ -62,7 +71,8 @@ public class WaterTowerNode extends PNode {
             setPickable( false );
         }} );
 
-        addChild( new PImage( BufferedImageUtils.multiScaleToHeight( FluidPressureAndFlowApplication.RESOURCES.getImage( "panel.png" ), 113 ) ) {{
+        //Panel covering the hole
+        addChild( new PImage( BufferedImageUtils.multiScaleToHeight( RESOURCES.getImage( "panel.png" ), 113 ) ) {{
             final Rectangle2D towerBounds = waterTower.getTankShape().getBounds2D();
             final Point2D point = transform.modelToView( towerBounds.getMaxX(), towerBounds.getMinY() );
             setOffset( point.getX(), point.getY() - getFullBounds().getHeight() );
